--- a/index.html
+++ b/index.html
@@ -52,101 +52,22 @@
     </script>
 
 </head>
-<html>
+
 <body>
    <!--HEADER-->
    <div class="header">
        <div class="container">
-<!--           <div class="row nav-container">-->
-<!--
-               <div class="col-md-6 col-xs-12 hidden-md-up">
-                   <a href="javascript:void(0);" class="logo"></a>
-                   <div class="nav-content-container">
-                        <div class="nav-content pull-sm-right">
-                            <a class="menu" href="javascript:void(0);">
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                            </a>
-
-                           <ul class="nav pull-sm-left">
-                                <li><a class="active" href="javascript:void(0);">Home</a></li>
-                                <li><a href="portfolio.html">Portfolio</a></li>
-                                <li><a href="https://amandawondergem.wordpress.com/" target="_blank">Blog</a></li>
-                                <li><a href="contact.html">Contact</a></li>
-                            </ul>
-                            <ul class="social-media pull-sm-right">
-                                <li><a class="behance" href="http://www.behance.net/wondergemamandac31e" target="_blank" title="Behance"><span class="sr-only">Behance</span></a></li>
-                                <li><a class="linkedin" href="https://www.linkedin.com/in/amandawondergem" target="_blank" title="LinkedIn"><span class="sr-only">LinkedIn</span></a></li>
-                                <li><a class="vimeo" href="https://vimeo.com/amandawondergem" target="_blank" title="Vimeo"><span class="sr-only">Vimeo</span></a></li>
-                                <li><a class="youtube" href="http://www.youtube.com/channel/UCCeOnm4B_8i90XEo7fGClig/videos" target="_blank" title="YouTube"><span class="sr-only">YouTube</span></a></li>
-                            </ul>
-                       </div>
-                   </div>
-               </div>
--->
-<!--
-               <div class="col-md-6 col-xs-12 hidden-md-up">
-                   <nav class="navbar hidden-md-up pull-xs-right mobile-nav-button-container">
-                      <button class="navbar-toggler mobile-nav" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
-                        &#8411;
-                      </button>
-                    </nav>
-                   <a href="javascript:void(0);" class="logo"></a>
-                   <div class="nav-content-container">
-                        <div class="collapse navbar-toggleable-sm nav-content pull-sm-right" id="exCollapsingNavbar">
-                            <button class="navbar-toggler close-button" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
-                            &#8855;
-                          </button>
-                           <ul class="nav pull-sm-left">
-                                <li><a class="active" href="javascript:void(0);">Home</a></li>
-                                <li><a href="portfolio.html">Portfolio</a></li>
-                                <li><a href="https://amandawondergem.wordpress.com/" target="_blank">Blog</a></li>
-                                <li><a href="contact.html">Contact</a></li>
-                            </ul>
-                            <ul class="social-media pull-sm-right">
-                                <li><a class="behance" href="http://www.behance.net/wondergemamandac31e" target="_blank" title="Behance"><span class="sr-only">Behance</span></a></li>
-                                <li><a class="linkedin" href="https://www.linkedin.com/in/amandawondergem" target="_blank" title="LinkedIn"><span class="sr-only">LinkedIn</span></a></li>
-                                <li><a class="vimeo" href="https://vimeo.com/amandawondergem" target="_blank" title="Vimeo"><span class="sr-only">Vimeo</span></a></li>
-                                <li><a class="youtube" href="http://www.youtube.com/channel/UCCeOnm4B_8i90XEo7fGClig/videos" target="_blank" title="YouTube"><span class="sr-only">YouTube</span></a></li>
-                            </ul>
-                       </div>
-                   </div>
-               </div>
--->
-<!--
-               <div class="col-md-7 col-xs-12 hidden-sm-down pull-sm-left">
-                   <a href="javascript:void(0);" class="logo"></a>
-                   <ul class="nav">
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="https://amandawondergem.wordpress.com/" target="_blank">Blog</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-               </div>
--->
-<!--
-               <div class="col-md-5 col-xs-12 hidden-sm-down pull-md-right">
-                   <ul class="social-media pull-md-right">
-                        <li><a class="behance" href="http://www.behance.net/wondergemamandac31e" target="_blank" title="Behance"><span class="sr-only">Behance</span></a></li>
-                        <li><a class="linkedin" href="https://www.linkedin.com/in/amandawondergem" target="_blank" title="LinkedIn"><span class="sr-only">LinkedIn</span></a></li>
-                        <li><a class="vimeo" href="https://vimeo.com/amandawondergem" target="_blank" title="Vimeo"><span class="sr-only">Vimeo</span></a></li>
-                        <li><a class="youtube" href="http://www.youtube.com/channel/UCCeOnm4B_8i90XEo7fGClig/videos" target="_blank" title="YouTube"><span class="sr-only">YouTube</span></a></li>
-                    </ul>
-               </div>
--->
-<!--           </div>-->
           <div class="row">
               <div class="col-xs-12">
                   <div class="logo-nav-wrapper">
                       <a href="javascript:void(0);" class="logo"></a>
-                      <a class="menu-xs hidden-md-up" href="javascript:void(0);">
+                      <a class="menu-btn-mobile hidden-md-up" href="javascript:void(0);">
                           <span></span>
                           <span></span>
                           <span></span>
                           <span></span>
                       </a>
-                      <div class="navi-container">
+                      <div class="nav-container">
                           <ul class="nav">
                             <li><a class="active" href="javascript:void(0);">Home</a></li>
                             <li><a href="portfolio.html">Portfolio</a></li>
@@ -181,14 +102,14 @@
                   <div class="col-xs-12">
                       <h2>Featured Work</h2>
                       <div class="feature-work-wrapper">
-                         <a class="featured-work" href="javascript:void(0);">
+                         <a class="featured-work" href=".//portfolio-pages/adventure-finder.html">
                              <img class="img-fluid" src="img/featured-work-adventure-finder.jpg" alt="">
                              <span class="overlay">
                                  <h3>Adventure Finder App</h3>
                                  <p>Designed for people to spend less time looking for their next adventure and more time where they want to&nbsp;be.</p>
                              </span>
                          </a>
-                         <a class="featured-work" href="javascript:void(0);">
+                         <a class="featured-work" href="portfolio-pages/demo-reel.html">
                              <img class="img-fluid" src="img/featured-work-demo-reel.jpg" alt="">
                              <span class="overlay">
                                  <h3>Demo Reel</h3>
@@ -272,6 +193,8 @@
        </div>
    </div><!--END HOME-->
 
+    <div data-load="footer.html"></div>
+
     <!--FOOTER-->
     <div class="container-fluid footer">
         <div class="row">
@@ -290,7 +213,7 @@
                     <li><a class="vimeo" href="https://vimeo.com/amandawondergem" target="_blank" title="Vimeo"><span class="sr-only">Vimeo</span></a></li>
                     <li><a class="youtube" href="http://www.youtube.com/channel/UCCeOnm4B_8i90XEo7fGClig/videos" target="_blank" title="YouTube"><span class="sr-only">YouTube</span></a></li>
                 </ul>
-                <p class="copyright">&copy;&nbsp;2016 Amanda Wondergem</p>
+                <p class="copyright">&copy;&nbsp;2017 Amanda Wondergem</p>
                 <div class="orange-underline"></div>
             </div>
         </div>
